# python-manifest

./: .flake8  .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.gitlab/: default.yml  release.yml  stable.yml  templates.yml
docker/: docs.Dockerfile
docs/: basic_usage.md  getting_started.md  index.md
docs/advanced_usage/: expressions.md  file_systems.md  hooks.md  index.md  instantiable.md
docs/api/: expressions.md  hooks.md  instantiable.md  manifest.md
docs/css/: theme.css
manifest/: __init__.py  base.py  hooks.py  instantiable.py  parse.py  pydantic.py  utils.py
manifest/expressions/: __init__.py  operations.py  resolve.py
manifest/hooks/: __init__.py  builtin.py  interface.py
manifest/hooks/expressions/: __init__.py  operations.py  resolve.py
manifest/serializers/: __init__.py  base.py  jsons.py  noop.py  tomls.py  yamls.py
tests/: mydummyobject.py  test_base.py  test_hooks.py  test_instantiable.py  test_parse.py  test_serializers.py  test_utils.py
tests/expressions/: test_operations.py  test_resolve.py
tests/hooks/: test_builtin.py  test_interface.py
tests/hooks/expressions/: test_operations.py  test_resolve.py
